--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -169,3 +169,33 @@ collections:
             - label: "Text"
               name: "text"
               widget: "markdown"
+  - label: "FAQ"
+    name: "faq"
+    files:
+      - label: "FAQ Settings"
+        name: "faq_settings"
+        file: "content/faq/_index.md"
+        fields:
+          - label: "Page Title"
+            name: "title"
+            widget: "string"
+          - label: "Description"
+            name: "description"
+            widget: "text"
+          - label: "Top section background image"
+            name: "background"
+            widget: "file"
+      - label: "FAQ Questions"
+        name: "faq_questions"
+        file: "themes/carpal-tunnel/data/faq.yml"
+        fields:
+          - label: "Question List"
+            name: "list"
+            widget: "list"
+            fields:
+              - label: "Question"
+                name: "question"
+                widget: "string"
+              - label: "Answer"
+                name: "answer"
+                widget: "markdown"
