--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,8 +2,8 @@ backend:
   name: git-gateway
   branch: master
 
-media_folder: "themes/carpal-tunnel/static/assets/images/page-images"
-public_folder: "/assets/images/page-images"
+media_folder: "themes/carpal-tunnel/static/assets/images/"
+public_folder: "/assets/images/"
 
 collections:
   - label: "General"
