--- a/config.yml
+++ b/config.yml
@@ -24,4 +24,4 @@ params:
   author: modstud.io
   description: This is meta description for this site
   googleAnalitycsID: Your ID
-  logo: assets/images//logo.svg
+  logo: assets/images/logo.svg
