--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -169,8 +169,8 @@ collections:
             - label: "Text"
               name: "text"
               widget: "markdown"
-    - label: "Testimonials List"
-      name: "list"
+    - label: "Testimonials"
+      name: "testimonials"
       file: "themes/carpal-tunnel/data/testimonials.yml"
       fields:
         - label: "Heading"
@@ -180,7 +180,7 @@ collections:
           name: "review"
           widget: "list"
           fields:
-            - {label: "Name", name: "title", widget: "string"}
+            - {label: "Name", name: "name", widget: "string"}
             - {label: "Additional Info", name: "company", widget: "string"}
             - {label: "Photo", name: "image", widget: "file"}
             - {label: "Text", name: "text", widget: "markdown"}
