--- a/themes/carpal-tunnel/data/team.yml
+++ b/themes/carpal-tunnel/data/team.yml
@@ -36,7 +36,8 @@ member:
     linkedin_link: '#'
     specialty: Doctor of Physical Therapy
     text: >2-
-       Certified in Clinical Electro-diagnostics (EMG/NCS) Certified in Diagnostic Musculoskeletal Ultrasound (MSKUS)
+       Certified in Clinical Electro-diagnostics (EMG/NCS)  \
+       Certified in Diagnostic Musculoskeletal Ultrasound (MSKUS)
 
       Dr. Kevin Dusenbury, DPT is an Electric Testing Specialist He provides
       this service to patients at the Carpal Tunnel Center, enabling them to
