--- a/themes/carpal-tunnel/data/our_process.yml
+++ b/themes/carpal-tunnel/data/our_process.yml
@@ -1,19 +1,20 @@
-process:
-  heading: "Our process"
-  subheading: "The efficient process that we offer includes:"
-  enable : true
-  item:
-    - icon: "assets/images/consult.svg"
-      text: "Consultation with Dr. Green at his office or by videoconference. <br> (We also offer initial screening at our satellite office in Lakewood NJ.) "
+heading: "Our process"
+subheading: "The efficient process that we offer includes:"
+item:
+  - icon: "assets/images/consult.svg"
+    text: "
+          Consultation with Dr. Green at his office or by videoconference.  \
+          
+          (We also offer initial screening at our satellite office in Lakewood NJ.) "
 
-    - icon: "assets/images/arrangement.svg"
-      text: "Arrangement at the same location, for electrical testing to confirm the diagnosis and establish objective baseline."
+  - icon: "assets/images/arrangement.svg"
+    text: "Arrangement at the same location, for electrical testing to confirm the diagnosis and establish objective baseline."
 
-    - icon: "assets/images/treatment.svg"
-      text: "Surgical treatment with the single port endoscopic technique at our Ohio State licensed Surgery Center also located at the same location. "
+  - icon: "assets/images/treatment.svg"
+    text: "Surgical treatment with the single port endoscopic technique at our Ohio State licensed Surgery Center also located at the same location. "
 
-    - icon: "assets/images/follow-up.svg"
-      text: "Postop follow-up at the same location with hand therapy provided by our licensed Occupational Therapist, also at the same location. "
+  - icon: "assets/images/follow-up.svg"
+    text: "Postop follow-up at the same location with hand therapy provided by our licensed Occupational Therapist, also at the same location. "
 
-    - icon: "assets/images/diagnosis.svg"
-      text: "This process allows for rapid diagnosis and treatment with relief from symptoms. It also prevents further damage to the nerve caused by delay. "
+  - icon: "assets/images/diagnosis.svg"
+    text: "This process allows for rapid diagnosis and treatment with relief from symptoms. It also prevents further damage to the nerve caused by delay. "
