--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -109,50 +109,6 @@ collections:
             - name: "lakewood_phone"
               label: "Phone number"
               widget: "string"
-  - label: "Team"
-    name: "team"
-    files:
-    - name: "team_settings"
-      label: "Page Settings"
-      file: "content/our-team/_index.md"
-      fields:
-        - label: "Page Title"
-          name: "title"
-          widget: "string"
-        - label: "Description"
-          name: "description"
-          widget: "text"
-        - label: "Top section background image"
-          name: "background"
-          widget: "file"
-    - name: "team_members"
-      label: "Members"
-      file: "themes/carpal-tunnel/data/team.yml"
-      fields:
-        - label: "Homepage Heading"
-          name: "home_title"
-          widget: "string"
-        - label: "Members"
-          name: "member"
-          widget: "list"
-          fields:
-            - {label: "Name", name: "title", widget: "string"}
-            - {label: "Specialty", name: "specialty", widget: "string"}
-            - {label: "ID", name: "id", widget: "string"}
-            - {label: "Text", name: "text", widget: "markdown"}
-            - {label: "Link to Linkedin", name: "linkedin_link", widget: "string"}
-            - {label: "Photo", name: "image", widget: "file"}
-        - label: "Additional Staff Heading"
-          name: "staff_title"
-          widget: "string"
-        - label: "Additional Staff"
-          name: "staff"
-          widget: "list"
-          fields:
-            - {label: "Name", name: "title", widget: "string"}
-            - {label: "Specialty", name: "specialty", widget: "string"}
-            - {label: "Link to Linkedin", name: "linkedin_link", widget: "string"}
-            - {label: "Photo", name: "image", widget: "file"}
   - label: "Homepage"
     name: "homepage"
     files:
@@ -229,6 +185,50 @@ collections:
             - {label: "Additional Info", name: "company", widget: "string"}
             - {label: "Photo", name: "image", widget: "file"}
             - {label: "Text", name: "text", widget: "markdown"}
+  - label: "Team"
+    name: "team"
+    files:
+    - name: "team_settings"
+      label: "Page Settings"
+      file: "content/our-team/_index.md"
+      fields:
+        - label: "Page Title"
+          name: "title"
+          widget: "string"
+        - label: "Description"
+          name: "description"
+          widget: "text"
+        - label: "Top section background image"
+          name: "background"
+          widget: "file"
+    - name: "team_members"
+      label: "Members"
+      file: "themes/carpal-tunnel/data/team.yml"
+      fields:
+        - label: "Homepage Heading"
+          name: "home_title"
+          widget: "string"
+        - label: "Members"
+          name: "member"
+          widget: "list"
+          fields:
+            - {label: "Name", name: "title", widget: "string"}
+            - {label: "Specialty", name: "specialty", widget: "string"}
+            - {label: "ID", name: "id", widget: "string"}
+            - {label: "Text", name: "text", widget: "markdown"}
+            - {label: "Link to Linkedin", name: "linkedin_link", widget: "string"}
+            - {label: "Photo", name: "image", widget: "file"}
+        - label: "Additional Staff Heading"
+          name: "staff_title"
+          widget: "string"
+        - label: "Additional Staff"
+          name: "staff"
+          widget: "list"
+          fields:
+            - {label: "Name", name: "title", widget: "string"}
+            - {label: "Specialty", name: "specialty", widget: "string"}
+            - {label: "Link to Linkedin", name: "linkedin_link", widget: "string"}
+            - {label: "Photo", name: "image", widget: "file"}
   - label: "FAQ"
     name: "faq"
     files:
@@ -259,3 +259,52 @@ collections:
               - label: "Answer"
                 name: "answer"
                 widget: "markdown"
+  - label: "About"
+    name: "about"
+    files:
+      - label: "Page Settings"
+        name: "about_settings"
+        file: "content/about/_index.md"
+        fields:
+          - label: "Page Title"
+            name: "title"
+            widget: "string"
+          - label: "Description"
+            name: "description"
+            widget: "text"
+          - label: "Top section background image"
+            name: "background"
+            widget: "file"
+      - label: "Info"
+        name: "about_info"
+        file: "themes/carpal-tunnel/data/about.yml"
+        fields:
+          - label: "Main Text"
+            name: "about_text"
+            widget: "object"
+            fields:
+              - label: "Heading"
+                name: "title"
+                widget: "markdown"
+              - label: "Photo"
+                name: "photo"
+                widget: "file"
+              - label: "Text"
+                name: "text"
+                widget: "markdown"
+          - label: "Clinic"
+            name: "clinic"
+            widget: "object"
+            fields:
+              - label: "Clinic Heading"
+                name: "clinic_title"
+                widget: "string"
+              - label: "Clinic Image"
+                name: "clinic_image"
+                widget: "file"
+          - label: "Process"
+            name: "process"
+            widget: "list"
+            fields:
+              - {label: "Icon", name: "icon", widget: "file"}
+              - {label: "Text", name: "text", widget: "markdown"}
