Update Homepage “slideshow”

--- a/themes/carpal-tunnel/data/slideshow.yml
+++ b/themes/carpal-tunnel/data/slideshow.yml
@@ -12,15 +12,13 @@ item:
   - heading: Endoscopic Carpal Tunnel Release
     image: assets/images/slideshow-2.jpg
     text: >-
-      This is a minimal invasive procedure. 
-
+      This is a minimal invasive procedure. \
 
       In Open carpal tunnel surgery, which is the most common technique, the
       surgeon makes a large incision in the center of the palm and cuts through
       layers of skin and tissue to release the median nerve in the carpal
       tunnel. Recovery takes longer because there is a wound on the palm itself
-      which is a high-pressure area on the hand.
-
+      which is a high-pressure area on the hand.\
 
       In the endoscopic carpal tunnel release, the surgeon makes a small
       incision in the folds of the wrist and guides a thin tube containing a
@@ -31,8 +29,7 @@ item:
     image: assets/images/slideshow-3.jpg
     text: >-
       Entrust the future of your hands with a surgeon who values their
-      intricacy. 
-
+      intricacy. \
 
       Dr. Rodney Green is a recognized expert in Hand Surgery. His precision as
       a plastic surgeon ensures that the tissues are handled carefully, and
