--- a/themes/carpal-tunnel/data/slideshow.yml
+++ b/themes/carpal-tunnel/data/slideshow.yml
@@ -24,4 +24,6 @@ item:
       Entrust the future of your hands with a surgeon who values their
       intricacy. Dr. Rodney Green is a recognized expert in Hand Surgery. His
       precision as a plastic surgeon ensures that the tissues are handled
-      carefully, and suturing is done expertly to avoid scarring.
+      carefully, and suturing is done expertly to avoid scarring. Dr. Green has
+      over 30 years of experience and has performed over 1,000 successful Carpal
+      Tunnel Surgeries.
